feat: add texto clientes

--- a/index.html
+++ b/index.html
@@ -271,6 +271,26 @@
       </div>
     </section>
 
+    <section id="home">
+      <div class="slideshow">
+        <img class="slide" src="img/clientes/nl.PNG">
+        <img class="slide" src="img/clientes/site_dani.png">
+        <img class="slide" src="img/clientes/pretinhos.png">
+        <img class="slide" src="img/clientes/pintouvagas.PNG">
+        <img class="slide" src="img/clientes/pitaya.PNG">
+      </div>
+
+      <div class="texto_home">
+        <h2>Alguns de nossos clientes</h2>
+        <p>Na nossa empresa, estamos orgulhosos de oferecer uma ampla gama de serviços de alta qualidade para atender às necessidades dos nossos clientes. Com uma equipe experiente e dedicada, realizamos serviços especializados em várias áreas, incluindo consultoria, desenvolvimento de software, design gráfico, marketing digital e muito mais.</p>
+        <p>Temos o prazer de trabalhar com uma variedade de clientes renomados, desde pequenas empresas locais até grandes corporações com reconhecimento internacionais. Estamos comprometidos em fornecer soluções personalizadas e resultados excepcionais para cada cliente, independentemente do tamanho ou do setor em que atuam.</p>
+        <p>Valorizamos a parceria com nossos clientes e buscamos estabelecer relacionamentos de longo prazo baseados na confiança, transparência e excelência. É gratificante ver o impacto positivo que nossos serviços têm gerado nos negócios e no sucesso dos nossos clientes.</p>
+        <p>Se você está procurando por serviços profissionais de alta qualidade e deseja fazer parte da nossa lista de clientes satisfeitos, entre em contato conosco hoje mesmo. Estamos prontos para ajudar a alcançar seus objetivos e impulsionar o crescimento do seu negócio.</p>
+      </div>
+
+
+    </section>
+
   </main>
 
   <footer>
