feat: alterado imagens e classes slide clientes

--- a/index.html
+++ b/index.html
@@ -271,13 +271,13 @@
       </div>
     </section>
 
-    <section id="home">
-      <div class="slideshow">
-        <img class="slide" src="img/clientes/nl.PNG">
-        <img class="slide" src="img/clientes/site_dani.png">
-        <img class="slide" src="img/clientes/pretinhos.png">
-        <img class="slide" src="img/clientes/pintouvagas.PNG">
-        <img class="slide" src="img/clientes/pitaya.PNG">
+    <section id="clientes">
+      <div class="slideshow_clientes">
+        <img class="slide_cliente" src="img/clientes/nl.PNG">
+        <img class="slide_cliente" src="img/clientes/site_dani.png">
+        <img class="slide_cliente" src="img/clientes/pretinhos.png">
+        <img class="slide_cliente" src="img/clientes/pintouvagas.PNG">
+        <img class="slide_cliente" src="img/clientes/pitaya.PNG">
       </div>
 
       <div class="texto_home">
