feat: botão de contato removido em telas pequenas.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <h2>Bem-vindo à Agência de Negócios Digitais (<strong>AND</strong>)</h2>
         <p>Sua parceira estratégica para impulsionar empresas que ainda não estão presentes na internet. Estamos aqui para ajudar a sua empresa a entrar no mundo digital e alcançar novas oportunidades de crescimento.</p>
         <p>Com os nossos <strong>planos e serviços</strong>, oferecemos soluções completas e personalizadas para atender às suas necessidades.<a href="#portfolio" class="btn_texto"><strong>Confira as opções disponíveis</strong></a>.</p>
-        <a href="https://wa.me/5555996078831?text=Tenho%20interesse%20em%20serviços%20ou%20produtos%20da%20AND" target="_blank" class="btn" id="btn_contato_home">Entre em Contato</a>
+        <div id="botao_contato_home">
+          <a href="https://wa.me/5555996078831?text=Tenho%20interesse%20em%20serviços%20ou%20produtos%20da%20AND" target="_blank" class="btn" id="btn_contato_home">Entre em Contato</a>
+        </div>
       </div>
       <div class="slideshow">
         <img class="slide" src="img/slide_show_0.jpg">
@@ -270,7 +272,9 @@
         </div>
       </div>
     </section>
-
+    <div id="separacao_clientes">
+      <h2>Alguns de nossos clientes</h2>
+    </div>
     <section id="clientes">
       <div class="slideshow_clientes">
         <img class="slide_cliente" src="img/clientes/nl.PNG">
@@ -280,8 +284,8 @@
         <img class="slide_cliente" src="img/clientes/pitaya.PNG">
       </div>
 
-      <div class="texto_home">
-        <h2>Alguns de nossos clientes</h2>
+      <div class="texto_clientes">
+
         <p>Estamos orgulhosos de oferecer uma ampla gama de serviços de alta qualidade para atender às necessidades dos nossos clientes. Com uma equipe experiente e dedicada, realizamos serviços especializados em várias áreas, incluindo consultoria, desenvolvimento de software, design gráfico, marketing digital e muito mais.</p>
         <p>Temos o prazer de trabalhar com uma variedade de clientes renomados, desde pequenas empresas locais até grandes corporações com reconhecimento internacionais. Estamos comprometidos em fornecer soluções personalizadas e resultados excepcionais para cada cliente, independentemente do tamanho ou do setor em que atuam.</p>
         <p>Valorizamos a parceria com nossos clientes e buscamos estabelecer relacionamentos de longo prazo baseados na confiança, transparência e excelência. É gratificante ver o impacto positivo que nossos serviços têm gerado nos negócios e no sucesso dos nossos clientes.</p>
