feat: adicionado carrossel para parceiros

--- a/index.html
+++ b/index.html
@@ -60,37 +60,37 @@
       <h2>Nossos Serviços</h2>
       <div class="servico">
         <i class="topico_servico"></i>
-        <p>Criação de Site</p>
-        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
-        <p>Personalização focada em produtos/serviços</p>
-        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
-        <p>Hospedagem do site incluso</p>
-        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
-        <p>Domínio gratuito</p>
-        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
-        <p>Criação de logomarca</p>
+        <span>Criação de Site</span>
+        <span class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</span>
+        <span>Personalização focada em produtos/serviços</span>
+        <span class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</span>
+        <span>Hospedagem do site incluso</span>
+        <span class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</span>
+        <span>Domínio gratuito</span>
+        <span class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</span>
+        <span>Criação de logomarca</span>
       </div>
       <div class="servico">
         <i class="topico_servico"></i>
-        <p>Design e consultoria em Marketing</p>
-        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
-        <p>Edição de imagens</p>
-        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
-        <p>Gerenciamento de página profissional do Facebook e Instagram</p>
-        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
-        <p>Publicações sociais diárias</p>
+        <span>Design e consultoria em Marketing</span>
+        <span class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</span>
+        <span>Edição de imagens</span>
+        <span class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</span>
+        <span>Gerenciamento de página profissional do Facebook e Instagram</span>
+        <span class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</span>
+        <span>Publicações sociais diárias</span>
       </div>
       <div class="servico">
         <i class="topico_servico"></i>
-        <p>Relatórios</p>
-        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
-        <p>Análise de concorrência</p>
-        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
-        <p>Análise de público interessado</p>
-        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
-        <p>Criação de loja digital e-commerce</p>
-        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
-        <p>Suporte e consultoria 24h</p>
+        <span>Relatórios</span>
+        <span class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</span>
+        <span>Análise de concorrência</span>
+        <span class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</span>
+        <span>Análise de público interessado</span>
+        <span class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</span>
+        <span>Criação de loja digital e-commerce</span>
+        <span class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</span>
+        <span>Suporte e consultoria 24h</span>
       </div>
     </section>
 
@@ -291,10 +291,57 @@
         <p>Valorizamos a parceria com nossos clientes e buscamos estabelecer relacionamentos de longo prazo baseados na confiança, transparência e excelência. É gratificante ver o impacto positivo que nossos serviços têm gerado nos negócios e no sucesso dos nossos clientes.</p>
         <p>Se você está procurando por serviços profissionais de alta qualidade e deseja fazer parte da nossa lista de clientes satisfeitos, entre em contato conosco hoje mesmo. Estamos prontos para ajudar a alcançar seus objetivos e impulsionar o crescimento do seu negócio.</p>
       </div>
-
-
     </section>
 
+    <section class="dark">
+      <h1 class="center">Nossos Parceiros</h1>
+      <div class="logo-container">
+        <div class="logo-carousel">
+          <div class="logo-slide">
+            <a href="https://www.parceiro1.com" target="_blank">
+              <img src="logo1.png" alt="Parceiro 1" class="logo-image">
+            </a>
+          </div>
+          <div class="logo-slide">
+            <a href="https://www.parceiro2.com" target="_blank">
+              <img src="logo2.png" alt="Parceiro 2" class="logo-image">
+            </a>
+          </div>
+          <div class="logo-slide">
+            <a href="https://www.parceiro3.com" target="_blank">
+              <img src="logo3.png" alt="Parceiro 3" class="logo-image">
+            </a>
+          </div>
+          <div class="logo-slide">
+            <a href="https://www.parceiro4.com" target="_blank">
+              <img src="logo4.png" alt="Parceiro 4" class="logo-image">
+            </a>
+          </div>
+          <div class="logo-slide">
+            <a href="https://www.parceiro5.com" target="_blank">
+              <img src="logo5.png" alt="Parceiro 5" class="logo-image">
+            </a>
+          </div>
+          <div class="logo-slide">
+            <a href="https://www.parceiro6.com" target="_blank">
+              <img src="logo6.png" alt="Parceiro 6" class="logo-image">
+            </a>
+          </div>
+          <div class="logo-slide">
+            <a href="https://www.parceiro7.com" target="_blank">
+              <img src="logo7.png" alt="Parceiro 7" class="logo-image">
+            </a>
+          </div>
+          <div class="logo-slide">
+            <a href="https://www.parceiro8.com" target="_blank">
+              <img src="logo8.png" alt="Parceiro 8" class="logo-image">
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+    
   </main>
 
   <footer>
@@ -320,7 +367,9 @@
   </footer>
 
 
-  <script src="javascript/index.js"></script>
 </body>
-
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  
+  <script src="javascript/index.js"></script>
 </html>
