--- a/index.html
+++ b/index.html
@@ -299,49 +299,47 @@
         <div class="logo-carousel">
           <div class="logo-slide">
             <a href="https://www.parceiro1.com" target="_blank">
-              <img src="logo1.png" alt="Parceiro 1" class="logo-image">
+              <img src="img/empresa/tw.png" alt="" class="logo-image">
             </a>
           </div>
           <div class="logo-slide">
             <a href="https://www.parceiro2.com" target="_blank">
-              <img src="logo2.png" alt="Parceiro 2" class="logo-image">
+              <img src="img/empresa/dani.png" alt="Parceiro 2" class="logo-image">
             </a>
           </div>
           <div class="logo-slide">
             <a href="https://www.parceiro3.com" target="_blank">
-              <img src="logo3.png" alt="Parceiro 3" class="logo-image">
+              <img src="img/empresa/sisefficere.png" alt="" class="logo-image">
             </a>
           </div>
           <div class="logo-slide">
             <a href="https://www.parceiro4.com" target="_blank">
-              <img src="logo4.png" alt="Parceiro 4" class="logo-image">
+              <img src="img/empresa/NL.png" alt="Parceiro 4" class="logo-image">
             </a>
           </div>
           <div class="logo-slide">
             <a href="https://www.parceiro5.com" target="_blank">
-              <img src="logo5.png" alt="Parceiro 5" class="logo-image">
+              <img src="img/empresa/cardapinho.png" alt="" class="logo-image">
             </a>
           </div>
           <div class="logo-slide">
             <a href="https://www.parceiro6.com" target="_blank">
-              <img src="logo6.png" alt="Parceiro 6" class="logo-image">
+              <img src="img/empresa/agendou.png" alt="Parceiro 6" class="logo-image">
             </a>
           </div>
           <div class="logo-slide">
             <a href="https://www.parceiro7.com" target="_blank">
-              <img src="logo7.png" alt="Parceiro 7" class="logo-image">
+              <img src="img/empresa/hostinger.png" alt="" class="logo-image">
             </a>
           </div>
           <div class="logo-slide">
             <a href="https://www.parceiro8.com" target="_blank">
-              <img src="logo8.png" alt="Parceiro 8" class="logo-image">
+              <img src="logo3.png" alt="" class="logo-image">
             </a>
           </div>
         </div>
       </div>
     </section>
-    
-    
   </main>
 
   <footer>
@@ -357,11 +355,6 @@
         <li><a href="#portfolio">Planos</a></li>
         <li><a href="https://wa.me/5555996078831?text=Tenho%20interesse%20em%20serviços%20ou%20produtos%20da%20AND" target="_blank">Contato</a></li>
       </ul>
-      <div class="social-media">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-      </div>
     </div>
     <p class="direitos">Todos os direitos reservados &copy; AND</p>
   </footer>
