feat: adicionado link do site dos parceiros

--- a/index.html
+++ b/index.html
@@ -298,38 +298,38 @@
       <div class="logo-container">
         <div class="logo-carousel">
           <div class="logo-slide">
-            <a href="https://www.parceiro1.com" target="_blank">
-              <img src="img/empresa/tw.png" alt="" class="logo-image">
+            <a href="https://www.twtransportes.com.br" target="_blank">
+              <img src="img/empresa/tw.png" alt="TW Transportes Santana do Livramento" class="logo-image">
             </a>
           </div>
           <div class="logo-slide">
-            <a href="https://www.parceiro2.com" target="_blank">
-              <img src="img/empresa/dani.png" alt="Parceiro 2" class="logo-image">
+            <a href="./dani" target="_blank">
+              <img src="img/empresa/dani.png" alt="Dani Motos" class="logo-image">
             </a>
           </div>
           <div class="logo-slide">
-            <a href="https://www.parceiro3.com" target="_blank">
+            <a href="https://sisefficere.com.br" target="_blank">
               <img src="img/empresa/sisefficere.png" alt="" class="logo-image">
             </a>
           </div>
           <div class="logo-slide">
             <a href="https://www.parceiro4.com" target="_blank">
-              <img src="img/empresa/NL.png" alt="Parceiro 4" class="logo-image">
+              <img src="img/empresa/NL.png" alt="New Life" class="logo-image">
             </a>
           </div>
           <div class="logo-slide">
-            <a href="https://www.parceiro5.com" target="_blank">
-              <img src="img/empresa/cardapinho.png" alt="" class="logo-image">
+            <a href="https://cardapinho.com" target="_blank">
+              <img src="img/empresa/cardapinho.png" alt="Cardapinho" class="logo-image">
             </a>
           </div>
           <div class="logo-slide">
-            <a href="https://www.parceiro6.com" target="_blank">
-              <img src="img/empresa/agendou.png" alt="Parceiro 6" class="logo-image">
+            <a href="https://agendou.net" target="_blank">
+              <img src="img/empresa/agendou.png" alt="Agendou" class="logo-image">
             </a>
           </div>
           <div class="logo-slide">
-            <a href="https://www.parceiro7.com" target="_blank">
-              <img src="img/empresa/hostinger.png" alt="" class="logo-image">
+            <a href="https://www.hostinger.com.br" target="_blank">
+              <img src="img/empresa/hostinger.png" alt="Hostinger" class="logo-image">
             </a>
           </div>
           <div class="logo-slide">
