--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             </a>
           </div>
           <div class="logo-slide">
-            <a href="https://www.parceiro4.com" target="_blank">
+            <a href="https://minhanewlife.com.br" target="_blank">
               <img src="img/empresa/NL.png" alt="New Life" class="logo-image">
             </a>
           </div>
