--- a/planos.html
+++ b/planos.html
@@ -192,6 +192,26 @@
             <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
         </div>
 
+        <div class="table-row-compre">
+          <div></div>
+          <div class="table-cell-compre" id="desconto">
+            <br>
+           <img src="img/50desconto.gif" alt="">
+          </div>
+          <div class="table-cell-compre" id="desconto">
+            <br>
+           <img src="img/50desconto.gif" alt="">
+          </div>
+          <div class="table-cell-compre" id="desconto">
+            <br>
+           <img src="img/50desconto.gif" alt="">
+          </div>
+          <div class="table-cell-compre" id="desconto">
+            <br>
+           <img src="img/50desconto.gif" alt="">
+          </div>
+        </div>
+
         <div class="table-row">
             <div class="table-cell-servico" id="table-cell-text">Valores</div>
             <div class="table-cell-valor"><strong>R$<br>50,00</strong></div>
