--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link rel="icon" type="image/png" href="img/icon.png">
 </head>
 
-<body>
+<body>    
+  <div class="fundoHeader"><img src="img/fundo_header.png" alt=""></div>
+    
   <header>
     <nav>
       <div class="logo">
