--- a/servicos.html
+++ b/servicos.html
@@ -146,27 +146,27 @@
         <br>
         <div class="table-row">
             <div class="table-cell-servico" id="table-cell-text">Sistema completo para agendamento de atendimento.</div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell-servico" id="table-cell-text">Sistema de controle de estoque.</div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell-servico" id="table-cell-text">Sistema de vendas por delivery e presencial.</div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell-servico" id="table-cell-text">Cardápio exclusivo e editável.</div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
         </div>
 
         <div class="table-row">
