--- a/planos.html
+++ b/planos.html
@@ -165,31 +165,31 @@
         <br>
         <div class="table-row">
             <div class="table-cell-servico" id="table-cell-text">Sistema completo para agendamento de atendimento.</div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img class="adicionalP" src="img/adicional.gif" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell-servico" id="table-cell-text">Sistema de controle de estoque.</div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img class="adicionalP" src="img/adicional.gif" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell-servico" id="table-cell-text">Sistema de vendas por delivery e presencial.</div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img class="adicionalP" src="img/adicional.gif" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell-servico" id="table-cell-text">Cardápio exclusivo e editável.</div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img class="adicionalP" src="img/adicional.gif" alt=""></div>
         </div>
 
         <div class="table-row-compre">
@@ -214,10 +214,10 @@
 
         <div class="table-row">
             <div class="table-cell-servico" id="table-cell-text">Valores</div>
-            <div class="table-cell-valor"><strong>R$<br>50,00</strong></div>
             <div class="table-cell-valor"><strong>R$<br>100,00</strong></div>
+            <div class="table-cell-valor"><strong>R$<br>125,00</strong></div>
             <div class="table-cell-valor"><strong>R$<br>150,00</strong></div>
-            <div class="table-cell-valor"><strong>R$<br>200,00</strong></div>
+            <div class="table-cell-valor"><strong>R$<br>210,00</strong></div>
         </div>
        
         <div class="table-row-compre">
